# ROS_Pupil_Labs_Record_Publisher

./: CMakeLists.txt  LICENSE  README.md  package.xml
gaze_record/pupil_labs/: .~lock.fixations.csv#  fixations.csv  gaze_positions.csv
launch/: record_pub.launch
src/: record_pub.cpp  record_pub.launch
